[gd_scene load_steps=17 format=2]

[ext_resource path="res://Nodes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/PlayersUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Southwold/SouthwoldTile.tres" type="TileSet" id=3]
[ext_resource path="res://Nodes/AempleforthBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://Nodes/PlayerCam.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Southwold/mobs/Slime.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Shake.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/LesserCrystalDisk.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Southwold/Southwold.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Lava.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Southwold/mobs/MobsSpawner.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Southwold/mobs/FireEgg.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Southwold/mobs/Butcher.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Southwold/mobs/Bird.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/VictoryStair.tscn" type="PackedScene" id=15]

[sub_resource type="CapsuleShape2D" id=1]

[node name="Southwold" type="Node2D"]
script = ExtResource( 9 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 186, 1, 0, 65722, 1, 0, 131123, 4, 0, 131124, 4, 2, 131258, 1, 0, 196608, 2, 0, 196658, 4, 0, 196659, 4, 65537, 196660, 4, 65537, 196661, 4, 2, 196794, 1, 0, 262144, 2, 65536, 262193, 4, 0, 262194, 4, 65537, 262195, 4, 65537, 262196, 4, 65537, 262197, 4, 65538, 262330, 1, 0, 327680, 2, 65536, 327729, 4, 65536, 327730, 4, 65537, 327731, 4, 65537, 327732, 4, 65537, 327733, 4, 65538, 327856, 8, 0, 327866, 1, 0, 393216, 2, 65536, 393265, 4, 65536, 393266, 4, 65537, 393267, 4, 65537, 393268, 4, 65537, 393269, 4, 65538, 393281, 4, 0, 393282, 4, 1, 393283, 4, 1, 393284, 4, 1, 393285, 4, 1, 393286, 4, 1, 393287, 4, 1, 393288, 4, 2, 393292, 4, 0, 393293, 4, 1, 393294, 4, 1, 393295, 4, 2, 393296, 9, 0, 393297, 9, 1, 393298, 9, 2, 393299, 9, 3, 393300, 3, 3, 393304, 3, 4, 393305, 3, 5, 393306, 3, 6, 393310, 3, 3, 393311, 9, 0, 393312, 9, 1, 393313, 9, 2, 393314, 9, 3, 393315, 4, 0, 393316, 4, 1, 393317, 4, 2, 393402, 1, 0, 458752, 2, 65536, 458765, 4, 0, 458766, 4, 2, 458799, 4, 0, 458800, 4, 1, 458801, 4, 65537, 458802, 4, 65537, 458803, 4, 65537, 458804, 4, 65537, 458805, 4, 65537, 458806, 4, 2, 458817, 4, 65536, 458818, 4, 65537, 458819, 4, 65537, 458820, 4, 65537, 458821, 4, 65537, 458822, 4, 65537, 458823, 4, 65537, 458824, 4, 65538, 458827, 4, 0, 458828, 4, 65537, 458829, 4, 65537, 458830, 4, 65537, 458831, 4, 65538, 458851, 4, 65536, 458852, 4, 65537, 458853, 4, 65538, 458927, 11, 0, 458938, 1, 0, 524288, 2, 65536, 524301, 4, 65536, 524302, 4, 65538, 524329, 4, 0, 524330, 4, 1, 524331, 4, 1, 524332, 4, 1, 524333, 4, 1, 524334, 4, 1, 524335, 4, 65537, 524336, 4, 65537, 524337, 4, 65537, 524338, 4, 65537, 524339, 4, 65537, 524340, 4, 65537, 524341, 4, 65537, 524342, 4, 65537, 524343, 4, 1, 524344, 4, 2, 524353, 4, 131072, 524354, 4, 131073, 524355, 4, 131073, 524356, 4, 131073, 524357, 4, 131073, 524358, 4, 131073, 524359, 4, 131073, 524360, 4, 131074, 524363, 4, 65536, 524364, 4, 65537, 524365, 4, 65537, 524366, 4, 65537, 524367, 4, 65538, 524387, 4, 65536, 524388, 4, 65537, 524389, 4, 65538, 524462, 13, 65539, 524463, 13, 1, 524464, 13, 1, 524465, 13, 65540, 524474, 1, 0, 589824, 2, 65536, 589837, 4, 65536, 589838, 4, 65538, 589864, 4, 0, 589865, 4, 65537, 589866, 4, 65537, 589867, 4, 65537, 589868, 4, 65537, 589869, 4, 65537, 589870, 4, 65537, 589871, 4, 65537, 589872, 4, 65537, 589873, 4, 65537, 589874, 4, 65537, 589875, 4, 65537, 589876, 4, 65537, 589877, 4, 65537, 589878, 4, 65537, 589879, 4, 65537, 589880, 4, 65538, 589899, 4, 65536, 589900, 4, 65537, 589901, 4, 65537, 589902, 4, 65537, 589903, 4, 65538, 589923, 4, 65536, 589924, 4, 65537, 589925, 4, 65538, 589939, 8, 0, 589974, 3, 4, 589975, 3, 6, 589987, 8, 0, 589997, 13, 65539, 589998, 13, 131075, 589999, 13, 65537, 590000, 13, 65537, 590001, 13, 131076, 590002, 13, 65540, 590010, 1, 0, 655360, 2, 65536, 655371, 4, 0, 655372, 4, 1, 655373, 4, 65537, 655374, 4, 65538, 655386, 4, 0, 655387, 4, 2, 655399, 4, 0, 655400, 4, 65537, 655401, 4, 65537, 655402, 4, 65537, 655403, 4, 65537, 655404, 4, 65537, 655405, 4, 65537, 655406, 4, 65537, 655407, 4, 65537, 655408, 4, 65537, 655409, 4, 65537, 655410, 4, 65537, 655411, 4, 65537, 655412, 4, 65537, 655413, 4, 65537, 655414, 4, 65537, 655415, 4, 65537, 655416, 4, 65537, 655417, 4, 2, 655434, 4, 0, 655435, 4, 65537, 655436, 4, 65537, 655437, 4, 65537, 655438, 4, 65537, 655439, 4, 65538, 655459, 4, 65536, 655460, 4, 65537, 655461, 4, 65538, 655470, 11, 0, 655479, 4, 0, 655480, 4, 2, 655501, 3, 3, 655505, 3, 4, 655506, 3, 6, 655519, 11, 0, 655532, 13, 65539, 655533, 13, 131075, 655534, 13, 65537, 655535, 13, 65537, 655536, 13, 65537, 655537, 13, 65537, 655538, 13, 131076, 655539, 13, 1, 655540, 13, 1, 655541, 13, 1, 655542, 13, 1, 655543, 13, 1, 655544, 13, 1, 655545, 13, 1, 655546, 1, 0, 720896, 2, 131072, 720907, 4, 65536, 720908, 4, 65537, 720909, 4, 65537, 720910, 4, 65538, 720922, 4, 131072, 720923, 4, 131074, 720935, 4, 65536, 720936, 4, 65537, 720937, 4, 65537, 720938, 4, 65537, 720939, 4, 65537, 720940, 4, 65537, 720941, 4, 65537, 720942, 4, 65537, 720943, 4, 65537, 720944, 4, 65537, 720945, 4, 65537, 720946, 4, 65537, 720947, 4, 65537, 720948, 4, 65537, 720949, 4, 65537, 720950, 4, 65537, 720951, 4, 65537, 720952, 4, 65537, 720953, 4, 65538, 720970, 4, 131072, 720971, 4, 131073, 720972, 4, 131073, 720973, 4, 65537, 720974, 4, 65537, 720975, 4, 65538, 720995, 4, 65536, 720996, 4, 65537, 720997, 4, 65538, 721006, 11, 65536, 721007, 11, 0, 721010, 6, 0, 721015, 4, 131072, 721016, 4, 131074, 721017, 6, 0, 721018, 12, 0, 721025, 5, 0, 721026, 11, 0, 721032, 3, 4, 721033, 3, 5, 721034, 3, 6, 721051, 3, 3, 721054, 6, 0, 721055, 11, 65536, 721066, 5, 0, 721067, 13, 65539, 721068, 13, 131075, 721069, 13, 65537, 721070, 13, 65537, 721071, 13, 65537, 721072, 13, 65537, 721073, 13, 65537, 721074, 13, 65537, 721075, 13, 65537, 721076, 13, 65537, 721077, 13, 65537, 721078, 13, 65537, 721079, 13, 65537, 721080, 13, 65537, 721081, 13, 65537, 721082, 1, 0, 786432, 0, 0, 786433, 0, 1, 786434, 0, 1, 786435, 0, 1, 786436, 0, 1, 786437, 0, 1, 786438, 0, 1, 786439, 0, 1, 786440, 0, 1, 786441, 0, 1, 786442, 0, 2, 786443, 4, 131072, 786444, 4, 131073, 786445, 4, 131073, 786446, 4, 131074, 786447, 0, 0, 786448, 0, 1, 786449, 0, 1, 786450, 0, 1, 786451, 0, 1, 786452, 0, 1, 786453, 0, 1, 786454, 0, 1, 786455, 0, 1, 786456, 0, 1, 786457, 0, 1, 786458, 0, 1, 786459, 0, 1, 786460, 0, 1, 786461, 0, 1, 786462, 0, 1, 786463, 0, 1, 786464, 0, 1, 786465, 0, 1, 786466, 0, 1, 786467, 0, 1, 786468, 0, 1, 786469, 0, 1, 786470, 0, 2, 786471, 4, 131072, 786472, 4, 131073, 786473, 4, 131073, 786474, 4, 131073, 786475, 4, 131073, 786476, 4, 131073, 786477, 4, 131073, 786478, 4, 131073, 786479, 4, 131073, 786480, 4, 131073, 786481, 4, 131073, 786482, 4, 131073, 786483, 4, 131073, 786484, 4, 131073, 786485, 4, 131073, 786486, 4, 131073, 786487, 4, 131073, 786488, 4, 131073, 786489, 4, 131074, 786490, 0, 0, 786491, 0, 1, 786492, 0, 1, 786493, 0, 1, 786494, 0, 1, 786495, 0, 1, 786496, 0, 1, 786497, 0, 1, 786498, 0, 1, 786499, 0, 1, 786500, 0, 1, 786501, 0, 1, 786502, 0, 1, 786503, 0, 1, 786504, 0, 1, 786505, 0, 1, 786506, 0, 1, 786507, 0, 1, 786508, 0, 2, 786509, 4, 65536, 786510, 4, 65537, 786511, 4, 65537, 786512, 4, 2, 786530, 4, 0, 786531, 4, 65537, 786532, 4, 65537, 786533, 4, 65538, 786534, 0, 0, 786535, 0, 1, 786536, 0, 1, 786537, 0, 1, 786538, 0, 1, 786539, 0, 1, 786540, 0, 2, 786541, 3, 4, 786542, 3, 5, 786543, 3, 5, 786544, 3, 5, 786545, 3, 5, 786546, 3, 5, 786547, 3, 5, 786548, 3, 5, 786549, 3, 5, 786550, 3, 5, 786551, 3, 5, 786552, 3, 5, 786553, 3, 5, 786554, 3, 6, 786555, 9, 0, 786556, 9, 1, 786557, 9, 2, 786558, 9, 3, 786559, 3, 4, 786560, 3, 5, 786561, 3, 5, 786562, 3, 5, 786563, 3, 5, 786564, 3, 5, 786565, 3, 6, 786566, 10, 0, 786567, 10, 0, 786568, 10, 0, 786569, 10, 0, 786570, 10, 0, 786571, 10, 0, 786572, 10, 0, 786573, 10, 0, 786574, 10, 0, 786575, 10, 0, 786576, 10, 0, 786577, 10, 0, 786578, 10, 0, 786579, 10, 0, 786580, 10, 0, 786581, 10, 0, 786582, 10, 0, 786583, 10, 0, 786584, 10, 0, 786585, 10, 0, 786586, 10, 0, 786587, 10, 0, 786588, 10, 0, 786589, 3, 4, 786590, 3, 5, 786591, 3, 5, 786592, 3, 5, 786593, 3, 5, 786594, 3, 5, 786595, 3, 5, 786596, 3, 6, 786597, 13, 0, 786598, 13, 1, 786599, 13, 1, 786600, 13, 1, 786601, 13, 1, 786602, 13, 1, 786603, 13, 131075, 786604, 13, 65537, 786605, 13, 65537, 786606, 13, 65537, 786607, 13, 65537, 786608, 13, 65537, 786609, 13, 65537, 786610, 13, 65537, 786611, 13, 65537, 786612, 13, 65537, 786613, 13, 65537, 786614, 13, 65537, 786615, 13, 65537, 786616, 13, 65537, 786617, 13, 65537, 786618, 1, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 0, 851998, 1, 0, 851999, 1, 0, 852000, 1, 0, 852001, 1, 0, 852002, 1, 0, 852003, 1, 0, 852004, 1, 0, 852005, 1, 0, 852006, 1, 0, 852007, 1, 0, 852008, 1, 0, 852009, 1, 0, 852010, 1, 0, 852011, 1, 0, 852012, 1, 0, 852013, 1, 0, 852014, 1, 0, 852015, 1, 0, 852016, 1, 0, 852017, 1, 0, 852018, 1, 0, 852019, 1, 0, 852020, 1, 0, 852021, 1, 0, 852022, 1, 0, 852023, 1, 0, 852024, 1, 0, 852025, 1, 0, 852026, 1, 0, 852027, 1, 0, 852028, 1, 0, 852029, 1, 0, 852030, 1, 0, 852031, 1, 0, 852032, 1, 0, 852033, 1, 0, 852034, 1, 0, 852035, 1, 0, 852036, 1, 0, 852037, 1, 0, 852038, 1, 0, 852039, 1, 0, 852040, 1, 0, 852041, 1, 0, 852042, 1, 0, 852043, 1, 0, 852044, 1, 0, 852045, 4, 65536, 852046, 4, 65537, 852047, 4, 65537, 852048, 4, 65537, 852049, 4, 1, 852050, 4, 1, 852051, 4, 1, 852052, 4, 1, 852053, 4, 1, 852054, 4, 1, 852055, 4, 1, 852056, 4, 1, 852057, 4, 1, 852058, 4, 1, 852059, 4, 1, 852060, 4, 1, 852061, 4, 1, 852062, 4, 1, 852063, 4, 1, 852064, 4, 1, 852065, 4, 1, 852066, 4, 65537, 852067, 4, 65537, 852068, 4, 65537, 852069, 4, 65538, 852070, 1, 0, 852071, 1, 0, 852072, 1, 0, 852073, 1, 0, 852074, 1, 0, 852075, 1, 0, 852076, 1, 0, 852077, 1, 0, 852078, 1, 0, 852079, 1, 0, 852080, 1, 0, 852081, 1, 0, 852082, 1, 0, 852083, 1, 0, 852084, 1, 0, 852085, 1, 0, 852086, 1, 0, 852087, 1, 0, 852088, 1, 0, 852089, 1, 0, 852090, 1, 0, 852091, 1, 0, 852092, 1, 0, 852093, 1, 0, 852094, 1, 0, 852095, 1, 0, 852096, 1, 0, 852097, 1, 0, 852098, 1, 0, 852099, 1, 0, 852100, 1, 0, 852101, 1, 0, 852125, 1, 0, 852126, 1, 0, 852127, 1, 0, 852128, 1, 0, 852129, 1, 0, 852130, 1, 0, 852131, 1, 0, 852132, 1, 0, 852133, 1, 0, 852134, 1, 0, 852135, 1, 0, 852136, 1, 0, 852137, 1, 0, 852138, 1, 0, 852139, 1, 0, 852140, 1, 0, 852141, 1, 0, 852142, 1, 0, 852143, 1, 0, 852144, 1, 0, 852145, 1, 0, 852146, 1, 0, 852147, 1, 0, 852148, 1, 0, 852149, 1, 0, 852150, 1, 0, 852151, 1, 0, 852152, 1, 0, 852153, 1, 0, 852154, 1, 0, 917581, 4, 131072, 917582, 4, 131073, 917583, 4, 131073, 917584, 4, 131073, 917585, 4, 131073, 917586, 4, 131073, 917587, 4, 131073, 917588, 4, 131073, 917589, 4, 131073, 917590, 4, 131073, 917591, 4, 131073, 917592, 4, 131073, 917593, 4, 131073, 917594, 4, 131073, 917595, 4, 131073, 917596, 4, 131073, 917597, 4, 131073, 917598, 4, 131073, 917599, 4, 131073, 917600, 4, 131073, 917601, 4, 131073, 917602, 4, 131073, 917603, 4, 131073, 917604, 4, 131073, 917605, 4, 131074, 917637, 1, 0, 917638, 1, 0, 917639, 1, 0, 917640, 1, 0, 917641, 1, 0, 917642, 1, 0, 917643, 1, 0, 917644, 1, 0, 917645, 1, 0, 917646, 1, 0, 917647, 1, 0, 917648, 1, 0, 917649, 1, 0, 917650, 1, 0, 917651, 1, 0, 917652, 1, 0, 917653, 1, 0, 917654, 1, 0, 917655, 1, 0, 917656, 1, 0, 917657, 1, 0, 917658, 1, 0, 917659, 1, 0, 917660, 1, 0, 917661, 1, 0, 917662, 1, 0, 917663, 1, 0, 917664, 1, 0, 917665, 1, 0, 917666, 1, 0, 917667, 1, 0, 917668, 1, 0, 917669, 1, 0, 917670, 1, 0, 917671, 1, 0, 917672, 1, 0, 917673, 1, 0, 917674, 1, 0, 917675, 1, 0, 917676, 1, 0, 917677, 1, 0, 917678, 1, 0, 917679, 1, 0, 917680, 1, 0, 917681, 1, 0, 917682, 1, 0, 917683, 1, 0, 917684, 1, 0, 917685, 1, 0, 917686, 1, 0, 917687, 1, 0, 917688, 1, 0, 917689, 1, 0, 917690, 1, 0 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 78.3 )

[node name="Cam" parent="Player" instance=ExtResource( 5 )]
limit_right = 1496

[node name="Shake" parent="Player" instance=ExtResource( 7 )]

[node name="PlayersUI" parent="." instance=ExtResource( 2 )]

[node name="Mobs" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Slime" parent="Mobs" instance=ExtResource( 6 )]
position = Vector2( 163.505, 55.0336 )

[node name="Slime4" parent="Mobs" instance=ExtResource( 6 )]
position = Vector2( 405.444, 17.6433 )

[node name="Slime3" parent="Mobs" instance=ExtResource( 6 )]
position = Vector2( 1468, 70.3 )

[node name="FirePos" type="Position2D" parent="Mobs"]
position = Vector2( 372.239, 59.726 )

[node name="FirePosTimer" type="Timer" parent="Mobs"]
autostart = true

[node name="FireEgg" parent="Mobs" instance=ExtResource( 12 )]
position = Vector2( 549.073, 86.3 )

[node name="FireEgg2" parent="Mobs" instance=ExtResource( 12 )]
position = Vector2( 933.029, 86.3 )

[node name="Butcher" parent="Mobs" instance=ExtResource( 13 )]
position = Vector2( 710.624, 100 )

[node name="Bird" parent="Mobs" instance=ExtResource( 14 )]
position = Vector2( 1182.51, 42.5189 )

[node name="Bird2" parent="Mobs" instance=ExtResource( 14 )]
position = Vector2( 1101.61, 46.5189 )

[node name="Interactables" type="Node2D" parent="."]

[node name="LesserCrystalDisk" parent="Interactables" instance=ExtResource( 8 )]
position = Vector2( 215.5, 74 )

[node name="LesserCrystalDisk2" parent="Interactables" instance=ExtResource( 8 )]
position = Vector2( 448, 58 )

[node name="LesserCrystalDisk3" parent="Interactables" instance=ExtResource( 8 )]
position = Vector2( 656, 98 )

[node name="LesserCrystalDisk4" parent="Interactables" instance=ExtResource( 8 )]
position = Vector2( 776, 98 )

[node name="LesserCrystalDisk5" parent="Interactables" instance=ExtResource( 8 )]
position = Vector2( 904.213, 90 )

[node name="Portal" type="Area2D" parent="."]
position = Vector2( 1480, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal"]
position = Vector2( -1.18127, 61.6946 )
shape = SubResource( 1 )

[node name="Lava" parent="." instance=ExtResource( 10 )]

[node name="stairs" type="Node2D" parent="."]
visible = false

[node name="VictoryStair" parent="stairs" instance=ExtResource( 15 )]
position = Vector2( 662.5, 80.2602 )

[node name="VictoryStair2" parent="stairs" instance=ExtResource( 15 )]
position = Vector2( 691.669, 64 )
[connection signal="form_changed" from="Player" to="PlayersUI" method="_on_Player_form_changed"]
[connection signal="health_changed" from="Player" to="PlayersUI" method="_on_Player_health_changed"]
[connection signal="is_dead" from="Player" to="." method="_on_Player_is_dead"]
[connection signal="mana_changed" from="Player" to="PlayersUI" method="_on_Player_mana_changed"]
[connection signal="set_max_health" from="Player" to="PlayersUI" method="_on_Player_set_max_health"]
[connection signal="set_max_mana" from="Player" to="PlayersUI" method="_on_Player_set_max_mana"]
[connection signal="timeout" from="Mobs/FirePosTimer" to="Mobs" method="_on_FirePosTimer_timeout"]
[connection signal="dead" from="Mobs/Butcher" to="." method="_on_Butcher_dead"]
[connection signal="body_entered" from="Portal" to="." method="_on_Portal_body_entered"]
